feat: Added additional opens for Surefire/Failsafe (#4)