@@ -431,8 +431,13 @@
                         </excludes>
                         <useSystemClassLoader>false</useSystemClassLoader>
                         <!--suppress MavenModelInspection -->
-                        <argLine>${surefire.argLine} -Xms1024m -Xmx2048m --add-exports
-                            java.base/jdk.internal.util.random=ALL-UNNAMED -XX:+EnableDynamicAgentLoading
+                        <argLine>
+                            ${surefire.argLine}
+                            -Xms1024m
+                            -Xmx2048m
+                            --add-exports java.base/jdk.internal.util.random=ALL-UNNAMED
+                            --add-opens java.base/java.time=ALL-UNNAMED
+                            -XX:+EnableDynamicAgentLoading
                         </argLine>
                         <testFailureIgnore>false</testFailureIgnore>
                         <reportsDirectory>${project.build.directory}/test-reports</reportsDirectory>
@@ -449,8 +454,13 @@
                         </includes>
                         <useSystemClassLoader>false</useSystemClassLoader>
                         <!--suppress MavenModelInspection -->
-                        <argLine>${failsafe.argLine} -Xms1024m -Xmx2048m --add-exports
-                            java.base/jdk.internal.util.random=ALL-UNNAMED -XX:+EnableDynamicAgentLoading
+                        <argLine>
+                            ${failsafe.argLine}
+                            -Xms1024m
+                            -Xmx2048m
+                            --add-exports java.base/jdk.internal.util.random=ALL-UNNAMED
+                            --add-opens java.base/java.time=ALL-UNNAMED
+                            -XX:+EnableDynamicAgentLoading
                         </argLine>
                         <reportsDirectory>${project.build.directory}/test-reports</reportsDirectory>
                     </configuration>
